[package]
name = "vsqx"
version = "0.1.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"

description = "Serializer and deserializer for .vsqx and .vpr (VOCALOID 3/4/5 sequence) file."
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/vsqx"
repository = "https://github.com/3c1u/vsqx"
keywords = ["vocaloid", "vsqx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.18.1", features = ["serialize"] }
serde = { version = "1.0.114", features = ["derive"] }
failure = "0.1.8"
serde_json = "1.0.56"
zip = { version = "0.5.6", default-features = false, features = ["deflate"] }
